--- a/packages/app/s-dashboard/src/css/index.css
+++ b/packages/app/s-dashboard/src/css/index.css
@@ -1,12 +1,10 @@
 .s-dashboard-iframe {
     position: fixed;
-    z-index: 9999999;
+    z-index: 9999;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    /* background: rgba(0, 0, 0, 0.3); */
-
     background: radial-gradient(
         ellipse at top left,
         sugar.color(main, --lighten 25 --alpha 0.1),
@@ -22,7 +20,6 @@
     }
 
     background-attachment: fixed;
-
     pointer-events: none;
     opacity: 0;
     backdrop-filter: blur(40px);
