--- a/packages/@websites/css-coffeekraken-io/src/views/sections/welcome/welcome.css
+++ b/packages/@websites/css-coffeekraken-io/src/views/sections/welcome/welcome.css
@@ -43,11 +43,16 @@
         top: 0;
         width: calc(100% + 400px);
         height: 100%;
-        background-color: sugar.color(main, surface, --lighten 3);
-        background-color: sugar.color(main, --lighten 45);
-        background: url('/dist/img/landscape-01.jpg');
+        background-color: sugar.color(main, background);
+        /* background-color: sugar.color(main, --lighten 45); */
+        /* background: url('/dist/img/landscape-01.jpg'); */
         background-position: 50% 50%;
         background-size: cover;
+        /* background-image: linear-gradient(
+            180deg,
+            sugar.color(main, surface, --darken 2),
+            sugar.color(main, background)
+        ); */
         /* background: radial-gradient(#000000, #000000); */
         /* background-image: conic-gradient(
             sugar.color(main, surface),
@@ -132,9 +137,9 @@
         /* pointer-events: none; */
         @sugar.transition;
 
-        * {
+        /* * {
             color: white !important;
-        }
+        } */
 
         /* &:hover {
             transform: translateY(-50%) scale(1.02);
