--- a/packages/tools/s-media/src/doc/README.md.twig
+++ b/packages/tools/s-media/src/doc/README.md.twig
@@ -17,7 +17,7 @@
 
 ## SMedia
 
-A simple class to handle the media (queries) like methods like buildMediaQuery, layoutCss, etc... All of this on top of the @specimen/types ISMedia type and the @coffeekraken/s-frontspec package
+A simple class to handle the media (queries) like methods like buildMediaQuery, layoutCss, etc... All of this on top of the @specim3n/types ISMedia type and the @coffeekraken/s-frontspec package
 
 ## Features
 
