--- a/packages/@websites/postcss-coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/@websites/postcss-coffeekraken-io/src/views/layouts/header/header.css
@@ -34,6 +34,10 @@
         flex-grow: 1;
 
         ._main-link {
+            padding: sugar.padding(20);
+            font-size: sugar.font.size(30);
+            @sugar.focus.outline;
+
             &.active {
                 color: sugar.color(accent);
             }
