--- a/packages/app/s-dashboard/src/css/index.css
+++ b/packages/app/s-dashboard/src/css/index.css
@@ -3,8 +3,8 @@
     z-index: 9999;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw !important;
+    height: 100vh !important;
     background: radial-gradient(
         ellipse at top left,
         sugar.color(main, --lighten 25 --alpha 0.1),
