--- a/packages/@app/sherlock/src/renderer/src/css/index.css
+++ b/packages/@app/sherlock/src/renderer/src/css/index.css
@@ -1,5 +1,7 @@
 @sugar.import ('./sugar.css');
+@sugar.import ('./generic/**/*.css');
+@sugar.import ('../js/**/*.css');
 
 body {
-    background: sugar.color(accent);
+    
 }
