--- a/packages/@app/sherlock/src/renderer/src/js/components/app/sherlock-app-component.css
+++ b/packages/@app/sherlock/src/renderer/src/js/components/app/sherlock-app-component.css
@@ -11,16 +11,28 @@ sherlock-app {
         display: flex;
         flex-grow: 1;
     }
+}
 
+._dragger {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    z-index: 999;
+    -webkit-user-select: none;
+    -webkit-app-region: drag;
 }
 
 ._bkg {
-        position: absolute;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        background: url('https://picsum.photos/1920/1080');
-        background-size: cover;
-        background-position: 50% 50%;
-        filter: grayscale(1);
-        opacity: 0.2;
-    }
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('https://picsum.photos/1920/1080');
+    background-size: cover;
+    background-position: 50% 50%;
+    filter: grayscale(1);
+    opacity: 0.2;
+}
