--- a/packages/components/s-specs-editor-component/src/css/components/_imports.css
+++ b/packages/components/s-specs-editor-component/src/css/components/_imports.css
@@ -1,4 +1,4 @@
-@import './actions.css';
+/* @import './actions.css'; */
 @import './child.css';
 @import './copy-button.css';
 @import './error.css';
