--- a/packages/@app/sherlock/src/renderer/src/css/sugar.css
+++ b/packages/@app/sherlock/src/renderer/src/css/sugar.css
@@ -10,6 +10,7 @@
 @sugar.ui.loader.classes;
 
 @sugar.typo.classes;
+@sugar.font.classes;
 @sugar.shape.classes;
 @sugar.color.classes;
 @sugar.gap.classes;
