--- a/packages/@app/sherlock/src/renderer/src/js/components/service/sherlock-service-component.css
+++ b/packages/@app/sherlock/src/renderer/src/js/components/service/sherlock-service-component.css
@@ -32,6 +32,10 @@ sherlock-service {
         @sugar.typo lead;
     }
 
+    ._result-widget {
+        margin-inline-end: sugar.margin(30);
+    }
+
     ._tools {
         display: flex;
         align-items: center;
