--- a/packages/@app/sherlock/src/renderer/src/js/components/spaces/sherlock-spaces-component.css
+++ b/packages/@app/sherlock/src/renderer/src/js/components/spaces/sherlock-spaces-component.css
@@ -72,6 +72,10 @@ sherlock-spaces {
             left: 50%;
             transform: translate(-50%, -50%);
             color: white;
+
+            [fill] {
+                fill: white;
+            }
         }
 
         &:has(._icon) {
