--- a/packages/@websites/postcss-coffeekraken-io/src/css/sugar.css
+++ b/packages/@websites/postcss-coffeekraken-io/src/css/sugar.css
@@ -19,6 +19,8 @@
 @sugar.margin.classes;
 @sugar.padding.classes;
 
+@sugar.ui.gauge.classes;
+
 /* chunked ui's */
 @sugar.chunk 'avatar' {
     @sugar.ui.avatar.classes;
