--- a/packages/@app/sherlock/src/renderer/src/css/sugar.css
+++ b/packages/@app/sherlock/src/renderer/src/css/sugar.css
@@ -3,6 +3,7 @@
 
 @sugar.ui.button.classes;
 @sugar.ui.select.classes;
+@sugar.ui.gauge.classes;
 @sugar.ui.input.classes;
 @sugar.ui.label.classes;
 @sugar.ui.tooltip.classes;
