--- a/packages/@app/sherlock/src/renderer/src/js/components/results/lighthouse/sherlock-lighthouse-result-component.css
+++ b/packages/@app/sherlock/src/renderer/src/js/components/results/lighthouse/sherlock-lighthouse-result-component.css
@@ -1,8 +1,40 @@
 sherlock-lighthouse-result {
 }
 
-.sh-lighthouse-result-list-widgtet {
-    background: red;
+.sh-lighthouse-result-list-widget {
+    display: flex;
+    gap: sugar.margin(20);
+    align-items: center;
+
+    .s-gauge {
+        font-size: 20px;
+
+        ._value {
+            opacity: 0.3 !important;
+        }
+    }
+
+    ._global {
+        display: flex;
+        gap: sugar.margin(10);
+        align-items: center;
+    }
+
+    ._separator {
+        padding-inline: sugar.padding(20);
+        opacity: 0.3;
+    }
+
+    ._categories {
+        display: flex;
+        gap: sugar.margin(30);
+        align-items: center;
+    }
+    ._category {
+        display: flex;
+        gap: sugar.margin(10);
+        align-items: center;
+    }
 }
 
 .sh-lighthouse-result {
