--- a/packages/@app/sherlock/src/renderer/src/js/components/app/sherlock-app-component.css
+++ b/packages/@app/sherlock/src/renderer/src/js/components/app/sherlock-app-component.css
@@ -36,6 +36,7 @@ sherlock-app {
         flex-direction: column;
         flex-grow: 1;
         flex-shrink: 0;
+        overflow-x: hidden;
         overflow-y: auto;
         @sugar.scrollbar;
     }
