--- a/packages/@examples/01-basic/src/css/index.css
+++ b/packages/@examples/01-basic/src/css/index.css
@@ -3,6 +3,9 @@
 @sugar.import ('../views/**/*.css');
 @sugar.import ('./generic/**/*.css');
 
+@sugar.view ('sugar.sections.pushBlock');
+@sugar.view ('sugar.sections.hero');
+
 body {
     background: sugar.color(main, background);
     overflow-x: hidden;
@@ -17,25 +20,6 @@ body {
 
 .content {
     min-height: 100vh;
-}
-
-@sugar.lod.prevent {
-    html[class='s-lod s-lod--0'] *:hover,
-    html[class='s-lod s-lod--0 s-lod--1'] *:hover {
-        position: relative;
-
-        &:after {
-            display: block;
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            border: dashed 1px rgba(255, 0, 0, 0.3);
-            pointer-events: none;
-        }
-    }
 }
 
 /* logo */
