--- a/packages/@examples/01-basic/src/css/sugar.css
+++ b/packages/@examples/01-basic/src/css/sugar.css
@@ -2,7 +2,7 @@
 * Init sugar. This will import a reset css and print the
 * needed variables
 */
-@sugar.init ($variant: 'dark');
+@sugar.init ($variant: 'light');
 
 /**
 * Generate some utility classes like "s-tc:accent, s-mb:30", etc...
