--- a/packages/@examples/01-basic/src/css/sugar.css
+++ b/packages/@examples/01-basic/src/css/sugar.css
@@ -3,6 +3,7 @@
 * needed variables
 */
 @sugar.init ($variant: 'light');
+@sugar.theme.import ($variant: 'dark');
 
 /**
 * Generate some utility classes like "s-tc:accent, s-mb:30", etc...
