--- a/packages/views/s-views/src/views/sugar/components/cards/cards.bare.css
+++ b/packages/views/s-views/src/views/sugar/components/cards/cards.bare.css
@@ -1,22 +1,39 @@
 .s-cards {
     ._grid {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    ._card {
+        display: flex;
+
+        > * {
+            width: 100%;
+        }
     }
 
     &-1 {
         ._grid {
-            grid-template-columns: 1fr;
+            grid-template-columns: repeat(1, minmax(0, 1fr));
         }
     }
     &-2 {
         ._grid {
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: repeat(2, minmax(0, 1fr));
         }
     }
     &-3 {
         ._grid {
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+        }
+    }
+    &-4 {
+        ._grid {
+            grid-template-columns: repeat(4, minmax(0, 1fr));
+        }
+    }
+    &-5 {
+        ._grid {
+            grid-template-columns: repeat(5, minmax(0, 1fr));
         }
     }
 
@@ -29,9 +46,6 @@
         }
     }
 
-    ._card {
-        display: flex;
-    }
     ._spacer {
         flex-grow: 1;
     }
