--- a/packages/views/s-views/src/views/sugar/sections/testimonials/testimonials.twig
+++ b/packages/views/s-views/src/views/sugar/sections/testimonials/testimonials.twig
@@ -1,16 +1,12 @@
-<section id="{{ id }}" class="s-section s-section-testimonials {{ attributes.class }} {{ __containerClasses(container) }} {{ __spacesClasses(spaces, frontspec) }}" {{ __attrs(attributes, ['class'])|raw }}>
-{{ __nodeDataTemplate('views.sections.testimonials', _context)|raw }}
+{% set section = {
+    type: 'testimonials'
+}|merge(section ?? {}) %}
+
+{% extends 'sugar/sections/simple/simple.twig' %}
+
+{% block content %}
 
     <div class="_content {{ __spacingClasses(spacing, 30) }}">
-        {% if title %}
-            <h1 class="_title s-typo s-typo-h1">{{ title|raw }}</h1>
-        {% endif %}
-        {% if intro %}
-            <p class="_lead s-typo s-typo-lead">{{ intro|raw }}</p>
-        {% endif %}
-        {% if text %}
-            <p class="_text s-typo s-typo-p">{{ text|raw }}</p>
-        {% endif %}
 
         <ol class="_testimonials">
         {% for idx, testimonial in testimonials %}
@@ -42,18 +38,6 @@
         {% endfor %}
         </ol>
 
-        <div class="_ctas">
-            {% if primaryCta %}
-                <div class="_cta _primary-cta">
-                    {% include 'sugar/components/cta/cta.twig' with primaryCta only %}
-                </div>
-            {% endif %}
-            {% if secondaryCta %}
-                <div class="_cta _secondary-cta">
-                    {% include 'sugar/components/cta/cta.twig' with secondaryCta only %}
-                </div>
-            {% endif %}
-        </div>
     </div>
 
-</section>
+{% endblock %}
